<resources>
    <string name="app_name">IntegrationDAW</string>
    <string name="enter_email">Ingrese un email</string>
    <string name="enter_password">Ingrese una constraseña</string>
    <string name="register">Registar usuario</string>
    <string name="login">Inicio de sesion</string>
    <string name="title_activity_score">Score</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading_data">Cargando información...</string>
    <string name="error_load_information">Error al cargar la información.\\nVuelve a intertarlo más tarde</string>

    <!--Facebook-->
    <string name="facebook_app_id">1079443402208069</string>
    <string name="fb_login_protocol_scheme">fb1079443402208069</string>
    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <!--GuessWord-->
    <string name="jugar">JUGAR</string>
    <string name="sigleton">SIGLETON</string>
    <string name="decorator">DECORATOR</string>
    <string name="composite">COMPOSITE</string>
    <string name="strategy">STRATEGY</string>
    <string name="adapter">ADAPTER</string>
    <string name="command">COMMAND</string>
    <string name="fecade">FECADE</string>
    <string name="prototype">PROTOTYPE</string>
    <string name="proxy">PROXY</string>
    <string name="builder">BUILDER</string>
    <string name="factory">FACTORY</string>
    <string name="abstract_factory">ABSTRACT FACTORY</string>
    <string name="salir">SALIR</string>
    <string name="btMain">Principal</string>
    <string name="name">Nombre</string>
    <string name="encapsulation">ENCAPSULAMIENTO</string>
    <string name="system_in">System.in</string>
    <string name="unit_one">UnidadI</string>
    <string name="unit_two">UnidadII</string>
    <string name="unit_three">UnidadIII</string>
    <string name="unit_four">UnidadIV</string>
    <string name="unit_five">UnidadV</string>
    <string name="incorrect">INCORRECTO</string>
    <string name="correct">CORRECTO</string>
    <string name="play">PLAY</string>
    <string name="abstractfactory">AbstractFactory</string>
    <string name="go_main_menu">Ir al menú</string>
    <string name="introduction">Introducción</string>
    <string name="developers">Desarolladores:</string>
    <string name="score">Score</string>
    <string name="exit">Salir</string>
    <string name="glosary">Glosario</string>
    <string name="get_y_set">GET Y SET</string>
    <string name="flush">FLUSH()</string>
    <string name="guess_word">¡ADIVINA LA   PALABRA!</string>
    <string name="information">La aplicacion DAW es una herramienta que te ayudara a aprender la materia de Desarrolo de Aplicaciones Movil de una manera distinta a la convencional de las escuelas, mas divertida y ayudara a los diferenten tipos de aprendizaje</string>
    <string name="developers_name">Gonzalez Puente Sandra Fabiola  Soto Barco Jose Carlos</string>
    <string name="success">Aciertos=0</string>
    <string name="share">Compartir</string>
    <string name="about">Acerca de</string>
    <string name="chart">Grafica</string>
    <string name="levels">Niveles</string>
    <string name="video">Video de instalación</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="lifes_count">Vidas:5</string>
    <string name="points_count">Puntos:0</string>
    <string name="question_guess">¿Que patrón de diseño es?</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="question_q5">Termino general para el tipo de ataques</string>
    <string name="q5_choices1">Code injection</string>
    <string name="q5_choice2">Command injection</string>
    <string name="q5_choice3">Caracteres perimitidos</string>
    <string name="question_q4">La aplicacion esta divida en unidades logicas</string>
    <string name="q4_choice1">Aplicacion al cliente</string>
    <string name="q4_choice2">Red local</string>
    <string name="q4_choice3">Aplicacion multicapa</string>
    <string name="question_q1">¿Que son los patrones de diseño?</string>
    <string name="q1_choice1">Son soluciones que damos a los problemas recurrentes</string>
    <string name="q1_choice2">Para el ahorro de tiempo</string>
    <string name="q1_choice3">Es un lenguaje comun</string>
    <string name="question_q3">Una cadena de conexion contiene ...</string>
    <string name="q3_choice1">Informacion de inicializacion</string>
    <string name="q3_choice2">Proveedores de datos</string>
    <string name="q3_choice3">Una secuencia de datos</string>
    <string name="question_q2">Se define para tratar la comunicacion de informacion</string>
    <string name="q2_choice2">Abstraccion de stream</string>
    <string name="q2_choice3">Filter stream</string>
    <string name="q2_choice1">Secuencia de datos</string>
    <string name="figure_x">X</string>
    <string name="indication_levels">Selecciona el nombre de la unidad, para ver su contenido</string>
    <string name="security">V: SEGURIDAD</string>
    <string name="objetive">OBJETIVO:</string>
    <string name="description_unit5">El alumno incorporará el manejo de esquemas de roles y usuarios y control de inyección de código para asegurar la información en una aplicación.</string>
    <string name="quiz5">Evaluar</string>
    <string name="multilayer_development">IV: DESARROLLO MULTICAPA</string>
    <string name="description_unit4">El alumno desarrollará una aplicación multiproceso empleando RMI(Remote Method Invocation) para implementar una arquitectura multicapa.</string>
    <string name="design_patterns">I.PATRONES DE DISEÑO</string>
    <string name="description_unit1">El alumno diseñará el plan de construcción utilizando patrones de diseño para agilizar el desarrollo de una aplicación.</string>
    <string name="data_manipulation">III: MANIPULACION DE DATOS</string>
    <string name="description_unit3">El alumno implementará una aplicación que permita el manejo de datos y la generación de reportes para presentar la información de una BD.</string>
    <string name="file_management">II: MANEJO DE ARCHIVOS</string>
    <string name="description_unit2">El alumno desarrollará una aplicación que permita crear, leer y escribir archivos para garantizar su disponibilidad.</string>
    <string name="need_email">Se debe ingresasr un email</string>
    <string name="need_password">Se debe ingresasr una contraseña</string>
    <string name="load_register">Realizando registro en linea...</string>
    <string name="success_register">Registro exitoso de usuario</string>
    <string name="duplicate_register">El usuario ya existe, vuelva a intentar</string>
    <string name="fail_register">No se puedo registrar el usuario, vuelva a intentar</string>
    <string name="dates_load">Cagando datos...</string>
    <string name="welcome_to">¡Bienvenido!</string>
    <string name="incorrect_email_or_password">Email o Contraseña incorrecto</string>
    <string name="description_encaptulation">Este concepto consiste en la ocultación del estado o de los datos miembro de un objeto, de forma que sólo es posible modificar los mismos mediante los métodos definidos para dicho objeto.</string>
    <string name="return_glosary">"Regresar al glosario"</string>
    <string name="exit_glosary">"Salir"</string>
    <string name="description_system">Es un objeto de una clase de java que se llama InputStream; Sirve para leer datos</string>
    <string name="description_set_get">Son la forma de acceder a atributos de una clase. Generalmente, se usan con los atributos privados, ya que a los públicos se puede acceder directamente sin tener que acudir a ellos.</string>
    <string name="description_abstract_factory">El patrón Abstract Factory está aconsejado cuando se prevé la inclusión de nuevas familias de productos, pero puede resultar contraproducente cuando se añaden nuevos productos o cambian los existentes, puesto que afectaría a todas las familias creadas.</string>
    <string name="description_flush">Obliga a que se escriba físicamente lo que aún está en el almacén temporal de escritura cuando se está utilizando un BufferedOutputStream.</string>
    <string name="description_prototype">El patrón de diseño Prototype sirve para crear clonaciones de objetos (instancias de clases) a fin de no acarrear todo lo que lleva la creación del mismo desde cero, parámetros, métodos a ejecutar, etc. Hay que tener en cuenta que clonar un objeto es mucho mas rápido que crearlo.</string>
    <string name="img_absract_factory">abstractfactory</string>
    <string name="img_adapter">adapter</string>
    <string name="img_builder">builder</string>
    <string name="img_command">command</string>
    <string name="img_composite">composite</string>
    <string name="img_decorator">decorator</string>
    <string name="img_prototype">prototype</string>
    <string name="img_proxy">proxy</string>
    <string name="img_sigleton">sigleton</string>
    <string name="img_strategy">strategy</string>
    <string name="score_game">Score</string>
    <string name="lifes_game">Vidas</string>
    <string name="finish_game">Fin del Juego   Aciertos:</string>
    <string name="new_game">Nuevo</string>
    <string name="exit_game">Exit</string>
    <string name="question_game">¿Que patrón de diseño es?</string>

</resources>
