<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.learndaw.second.integrationdaw.fragment.LevelsActivity">

    <!--Linear for the -->

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_one"
        android:textSize="13sp"
        android:textColor="#3d9302"
        android:layout_weight="1"
        android:id="@+id/fg_unit1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_two"
        android:textSize="13sp"
        android:textColor="#ff6506"
        android:layout_weight="1"
        android:id="@+id/fg_unit2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_three"
        android:textSize="13sp"
        android:textColor="#fa4a76"
        android:layout_weight="1"
        android:id="@+id/fg_unit3"/>

        <Button
            android:id="@+id/fg_unit4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_four"
            android:textColor="#36a3fc"
            android:textSize="13sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_five"
        android:textSize="13sp"
        android:textColor="#a475ef"
        android:layout_weight="1"
        android:id="@+id/fg_unit5"/>

</LinearLayout>

    <FrameLayout
        android:id="@+id/Contetnt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="402dp"
            android:layout_height="392dp"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center_horizontal"/>
    </FrameLayout>

</LinearLayout>