<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:verticalScrollbarPosition="defaultPosition">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:padding="5dp"
        tools:context="com.learn.first.integrationdaw.activities.MenuActivity">


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="578dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            fab:fab_addButtonColorNormal="#8ebf28"
            fab:fab_addButtonColorPressed="#528308"
            fab:fab_addButtonPlusIconColor="#020202"
            fab:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goShare"
                fab:fab_colorNormal="#e78ede"
                fab:fab_colorPressed="#fedfff"
                fab:fab_icon="@drawable/ic_share_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/share" />


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goInfo"
                fab:fab_colorNormal="#5b62ef"
                fab:fab_colorPressed="#bbddf4"
                fab:fab_icon="@drawable/ic_info_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/about" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/id_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goGraph"
                fab:fab_colorNormal="#ab0451"
                fab:fab_colorPressed="#b689a1"
                fab:fab_icon="@drawable/ic_equalizer_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/chart" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goLevel"
                fab:fab_colorNormal="#ff5558"
                fab:fab_colorPressed="#f1d3d9"
                fab:fab_icon="@drawable/ic_import_contacts_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/levels" />


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_glosary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goGlosary"
                fab:fab_colorNormal="#3af5d0"
                fab:fab_colorPressed="#bbddf4"
                fab:fab_icon="@drawable/ic_description_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/glosary" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goVideos"
                fab:fab_colorNormal="#ef4346"
                fab:fab_colorPressed="#ef9c9f"
                fab:fab_icon="@drawable/ic_ondemand_video_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/video" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="close"
                fab:fab_colorNormal="#5b62ef"
                fab:fab_colorPressed="#bbddf4"
                fab:fab_icon="@drawable/ic_do_not_disturb_alt_black_24dp"
                fab:fab_size="mini"
                fab:fab_title="@string/log_out" />


        </com.getbase.floatingactionbutton.FloatingActionsMenu>


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="210dp"
            android:layout_height="225dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="107dp"
            fab:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="211dp"
            android:layout_height="124dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            fab:srcCompat="@drawable/bienvenido" />


    </RelativeLayout>
</ScrollView>