<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomadera"
    tools:context="com.learndaw.second.integrationdaw.guesstheword.GuessWordActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="316dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/tv_guess_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:fontFamily="@font/faster_one"
        android:text="@string/guess_word"
        android:textColor="#fa9f28"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="224dp" />

    <Button
        android:id="@+id/bt_play"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:text="@string/jugar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="166dp"
        android:text="@string/salir"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="392dp" />
</RelativeLayout>